# kate1

./: .gitignore  LICENSE  README.md  pyproject.toml
.streamlit/: config.toml
src/: __init__.py  main.py  semantha.py  snowpark_connection.py  state.py
src/pages_views/: abstract_pages.py  compare.py  document_collection.py  howto.py  rag.py  sidebar.py
src/util/: semantha_model_handling.py  text_handling.py
